# fluent-bit

./: CMakeLists.txt  appveyor.yml
cmake/: windows-setup.cmake
plugins/: CMakeLists.txt
plugins/filter_apm_geoip/: CMakeLists.txt  filter_geoip.c  filter_geoip.h
plugins/filter_apm_siemparser/: CMakeLists.txt  filter_siemparser.c  filter_siemparser.h
plugins/filter_apm_uaparser/: CMakeLists.txt  filter_uaparser.c  filter_uaparser.h
plugins/filter_apm_url_normalizer/: CMakeLists.txt  filter_url_normalize.c  filter_url_normalize.h
plugins/in_kafka/: CMakeLists.txt  in_kafka.c  in_kafka.h
plugins/out_es/: es.c
plugins/out_kafka_rest/: kafka.c  kafka.h  kafka_conf.c
